Work in progress...

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Tiny Blog - Homepage</title>
+
+<p><a th:href="@{/posts/register}">Register</a> - <a th:href="@{/posts/login}">Login</a></p>
 </head>
     <body>
         <div class="container">
@@ -18,5 +20,7 @@
                 </div>
             </div>
         </div>
+
+
     </body>
 </html>
