--- a/src/main/resources/templates/notfound.html
+++ b/src/main/resources/templates/notfound.html
@@ -10,7 +10,7 @@
   It either does not exist or it has gone into the world to find better server.</p>
 
 <p>But there a lot of interesting posts on our homepage.</p>
-<a th:href="@{/}" class="ahrefbutton">Back to homepage</a>
+<a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
 
 </body>
 </html>
