--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -14,6 +14,6 @@
     </div>
 
 </div>
-<a th:href="@{/}" class="ahrefbutton">Back to homepage</a>
+<a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
 </body>
 </html>
