Added info for user who wrote post and summary

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
                 <div th:each="post: ${posts}">
                     <h2><a th:href="@{'/posts/' + ${post.id}}" th:text="${post.title}">Title of post goes here</a></h2>
                     <p th:text="'Published ' + ${post.createdAt}">Creation date goes here</p>
+                    <p th:text="'Created by ' + ${post.userAccount.firstName}">Creator data goes here</p>
                     <p th:text="${post.content}">Post content text goes here</p>
                     <hr/>
 
