--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -2,18 +2,30 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
     <title th:text="${post.title} + ' - Tiny Blog'">Title</title>
 </head>
 <body>
 <div class="container">
+    <div class="leftcolumn">
     <div class="post">
         <h2 th:text="${post.title}">Title goes here</h2>
-        <p th:text="'Published ' + ${post.createdAt}">Creation date goes here</p>
+        <p th:text="'Created by ' + ${post.userAccount.firstName}" class="meta-info-author">Creator data goes here</p>
+<!--        <p th:text="'Published ' + ${post.createdAt}">Creation date goes here</p>-->
+        <p th:text="'Published ' + ${#temporals.format(post.createdAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Creation date goes here</p><br>
+        <p th:text="'Updated ' + ${#temporals.format(post.updatedAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Update date goes here</p><br>
+
         <p th:text="${post.content}">Post content text goes here</p>
 
     </div>
 
-</div>
+
 <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+<a th:href="@{'/posts/' + ${post.id} + '/updatePost'}" class="ahrefbutton">Edit</a>
+<a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>
+        </div>
+</div>
 </body>
 </html>
