--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,22 +10,42 @@
 <body>
 <div class="container">
     <div class="leftcolumn">
-    <div class="post">
-        <h2 th:text="${post.title}">Title goes here</h2>
-        <p th:text="'Created by ' + ${post.userAccount.firstName}" class="meta-info-author">Creator data goes here</p>
-<!--        <p th:text="'Published ' + ${post.createdAt}">Creation date goes here</p>-->
-        <p th:text="'Published ' + ${#temporals.format(post.createdAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Creation date goes here</p><br>
-        <p th:text="'Updated ' + ${#temporals.format(post.updatedAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Update date goes here</p><br>
+        <div sec:authorize="!isAuthenticated()">
+            <a th:href="@{/posts/register}" class="ahrefbutton">Register</a> <a th:href="@{/posts/login}" class="ahrefbutton">Login</a>
+        </div>
 
-<!--        <p th:text="${post.content}">Post content text goes here</p>-->
-        <pre th:text="${post.content}">Post content text goes here</pre>
+        <div sec:authorize="isAuthenticated()">
+            <a th:href="@{/posts/newpost}" class="ahrefbutton">Write a new post</a>
+            <div class="float: right">
+                <form th:action="@{/posts/logout}" method="POST">
+                    <label>Hi, <span sec:authentication="name">Username</span></label>
+                    <button type="submit" class="button">Logout</button>
+                </form>
+            </div>
+        </div>
 
-    </div>
 
+        <div class="post">
+            <h2 th:text="${post.title}">Title goes here</h2>
+            <p th:text="'Created by ' + ${post.userAccount.firstName}" class="meta-info-author">Creator data goes here</p>
+    <!--        <p th:text="'Published ' + ${post.createdAt}">Creation date goes here</p>-->
+            <p th:text="'Published ' + ${#temporals.format(post.createdAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Creation date goes here</p><br>
+            <p th:text="'Updated ' + ${#temporals.format(post.updatedAt, 'dd.MM.yyyy HH:mm')}"  class="meta-info-date">Update date goes here</p><br>
 
-<a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
-<a th:href="@{'/posts/' + ${post.id} + '/updatePost'}" class="ahrefbutton">Edit</a>
-<a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>
+    <!--        <p th:text="${post.content}">Post content text goes here</p>-->
+            <pre th:text="${post.content}">Post content text goes here</pre>
+
+            <div sec:authorize="isAuthenticated()">
+                <a th:href="@{'/posts/' + ${post.id} + '/updatePost'}" class="ahrefbutton">Edit</a>
+                <a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>
+            </div>
+
+        </div>
+        <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+
+<!--<a th:href="@{'/posts/' + ${post.id} + '/updatePost'}" class="ahrefbutton">Edit</a>-->
+<!--<a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>-->
+
         </div>
 </div>
 </body>
