--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -40,6 +40,20 @@
                 <a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>
             </div>
 
+            <div class="comments">
+                <h2>Comments</h2>
+                <div class="comment" th:each="comment : ${post.comments}">
+                    <p th:text="'Commented on ' + ${#temporals.format(comment.creationDate, 'yyyy-MM-dd')} + ' by ' + ${comment.user.userName}" class="meta-info-author">Comment date and author</p>
+                    <p th:text="${comment.content}">Content of comment</p>
+                </div>
+            </div>
+
+            <div class="align-center">
+                <a th:href="@{'/posts/{id}/comment'(id=${post.id})}">
+                    <button class="button" type="button">Comment Post</button>
+                </a>
+            </div>
+
         </div>
         <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
 
