--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -42,17 +42,28 @@
                 <a th:href="@{'/posts/' + ${post.id} + '/updatePost'}" class="ahrefbutton">Edit</a>
                 <a th:href="@{'/posts/' + ${post.id} + '/deletePost'}" class="ahrefbutton">Delete</a>
                  </span>
+
             </div>
 
             <div class="posts">
                 <h2>Comments</h2>
                 <div class="comment" th:each="comment : ${post.comments}">
-                    <p th:text="'Commented on ' + ${#temporals.format(comment.creationDate, 'yyyy-MM-dd')} + ' by ' + ${comment.user.userName}" class="meta-info-author">Comment date and author</p>
+                    <p th:text="'Commented on ' + ${#temporals.format(comment.creationDate, 'yyyy-MM-dd')} + ' by ' + ${comment.user.email}" class="meta-info-author">Comment date and author</p>
                     <p th:text="${comment.content}">Content of comment</p>
                     <div sec:authorize="isAuthenticated()">
-                        <span sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_USER')">
+                        <span sec:authorize="hasRole('ROLE_ADMIN')">
                         <a th:href="@{'/posts/' + ${comment.id} + '/deleteComment'}" class="ahrefbutton">Delete Comment</a>
                         </span>
+
+                        <span sec:authorize="hasRole('ROLE_USER')">
+<!--                            <span th:if="${comment.user.email == name}">-->
+                                <span th:if="${comment.user.email == #authentication.name}">
+                        <a th:href="@{'/posts/' + ${comment.id} + '/deleteComment'}" class="ahrefbutton">Delete Comment</a>
+                            </span>
+                        </span>
+
+
+
                     </div>
                 </div>
             </div>
