--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -9,20 +9,39 @@
 </head>
 <body>
 <div class="container">
+  <div class="leftcolumn">
 
-  <form action="#" th:action="@{/posts/useraccounts/update}" th:object="${userAccount}" method="post">
-    <input type="text" th:field="*{firstName}" placeholder="First Name">
-    <input type="text" th:field="*{lastName}" placeholder="Last Name">
-    <input type="text" th:field="*{email}" placeholder="Email">
-    <input type="text" th:field="*{userName}" placeholder="Username">
-    <input type="text" th:field="*{authorities}" placeholder="Role">
+<!--    "@{'/posts/' + ${post.id} + '/updatePost'}"-->
 
-    <button type="submit">Update User</button>
+  <form action="#" th:action="@{'/posts/showFormForUpdate/' + ${userAccount.id}}" th:object="${userAccount}" method="post">
+
+    <!--  Add hidden fields to handle update-->
+    <input type="hidden" th:field="*{id}" th:value="*{id}">
+
+    <p>First Name</p>
+    <input type="text" th:field="*{firstName}" placeholder="First Name" class="loginform">
+    <p class="warning" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
+    <p>Last Name</p>
+    <input type="text" th:field="*{lastName}" placeholder="Last Name" class="loginform">
+    <p class="warning" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
+    <p>Email</p>
+    <input type="text" th:field="*{email}" placeholder="Email" class="loginform">
+    <p class="warning"th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+    <p>UserName</p>
+    <input type="text" th:field="*{userName}" placeholder="Username" class="loginform">
+    <p class="warning" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
+    <p>Role</p>
+    <input type="text" th:field="*{authorities}" placeholder="Role" class="loginform">
+
+
+
+    <button type="submit" class="button">Update User</button>
   </form>
 
 
 
-<a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+    <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+  </div>
 </div>
 </body>
 </html>
