--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="container">
+    <div class="leftcolumn">
 
     <table th:unless = "${listOfUserAccounts.size() < 1}">
         <thead>
@@ -28,12 +29,13 @@
             <td th:text="${user.userName}"></td>
             <td th:text="${user.email}"></td>
             <td th:text="${user.getAuthorities()}">Role</td>
-            <td>Update user</td>
+            <td><a th:href="@{showFormForUpdate/{id}(id=${user.id})}">Update user</a></td>
         </tbody>
     </table>
 
   <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
 
+    </div>
 </div>
 
 </body>
