Finalizing some small things and css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link th:href="@{/css/style.css}" rel="stylesheet" />
-    <title>Tiny Blog - Homepage</title>
+    <title>Metal Blog - Homepage</title>
 
 
 </head>
@@ -33,7 +33,7 @@
 
 
             <div class="header">
-                <h1> Tiny Blog Posts</h1>
+                <h1>Metal Blog</h1>
             </div>
             <hr/>
 
