--- a/src/main/resources/templates/commentForm.html
+++ b/src/main/resources/templates/commentForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Write new comment</title>
+    <title>Write new comment - Metal Blog</title>
     <link th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
