--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -15,28 +15,40 @@
         <h1>User Management - Metal Blog</h1>
         <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
 
-    <table th:unless = "${listOfUserAccounts.size() < 1}">
-        <thead>
-        <th>User First Name</th>
-        <th>User Last Name</th>
-        <th>Username</th>
-        <th>Email</th>
-        <th>User Role</th>
-        <th>Admin</th>
+        <div sec:authorize="isAuthenticated()">
+                 <span sec:authorize="hasRole('ROLE_ADMIN')">
 
-        </thead>
-        <tbody>
-        <tr th:each="user : ${listOfUserAccounts}">
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.userName}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.getAuthorities()}">Role</td>
-            <td><a th:href="@{showFormForUpdate/{id}(id=${user.id})}" class="ahrefbutton">Update user</a></td>
-        </tbody>
-    </table>
+                    <table th:unless = "${listOfUserAccounts.size() < 1}">
+                        <thead>
+                        <th>User First Name</th>
+                        <th>User Last Name</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>User Role</th>
+                        <th>Admin</th>
 
-  <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+                        </thead>
+                        <tbody>
+                        <tr th:each="user : ${listOfUserAccounts}">
+                            <td th:text="${user.firstName}"></td>
+                            <td th:text="${user.lastName}"></td>
+                            <td th:text="${user.userName}"></td>
+                            <td th:text="${user.email}"></td>
+                            <td th:text="${user.getAuthorities()}">Role</td>
+                            <td><a th:href="@{showFormForUpdate/{id}(id=${user.id})}" class="ahrefbutton">Update user</a></td>
+                        </tbody>
+                    </table>
+
+                 </span>
+            <a th:href="@{/posts}" class="ahrefbutton">Back to homepage</a>
+        </div>
+
+            <div sec:authorize="!isAuthenticated()">
+                <a th:href="@{/posts/register}" class="ahrefbutton">Register</a> <a th:href="@{/posts/login}" class="ahrefbutton">Login</a>
+
+            </div>
+
+
 
     </div>
 </div>
